# hermit-playground

.github/workflows/: x86_64.yml
cmake/: HermitCore-librs.cmake
dev/bench/: data.js
usr/benchmarks/: CMakeLists.txt  bench.json  bench_output.c  bench_output.h  multithreaded.c
usr/benchmarks/allocation/: main.c
usr/benchmarks/demo/: elapsed_time.c  elapsed_time.h  laplace.c  laplace.h  main.c  matmul.c  matmul.h  pi.c  pi.h  sleep.c  sleep.h
usr/benchmarks/micro/: a.out  main.c
usr/benchmarks/mutex/: main.c
usr/benchmarks/netbench/: run.sh
usr/benchmarks/netbench/tcp-bw/: client.c  server.c
usr/benchmarks/netbench/tcp-latency/: client.c  server.c
usr/benchmarks/netbench/udp-bw/: client.c  server.c
usr/benchmarks/netbench/udp-latency/: client.c  server.c
